# minimp3-rs

./: .gitignore  .gitmodules  Cargo.toml  build.rs
examples/: example_bindgen.rs  example_safe.rs
src/: bindgen.rs  lib.rs  safe.rs
