[package]
name = "minimp3"
version = "0.1.0"
authors = ["germän gômez <germangb42@gmail.com>", "Chris West (Faux) <git@goeswhere.com>"]
description = "Rust bindings for the minimp3 library."
keywords = ["mp3", "audio", "decoder", "mpeg", "media"]
categories = ["multimedia", "multimedia::audio"]
license = "MIT"
repository = "https://github.com/FauxFaux/minimp3-rs"

[dependencies]
cast = "0.2"
more-asserts = "0.1"

[build-dependencies]
cc = "1.0"
bindgen = "0.32.3"
